fixed jar exception when reading from file